<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.google.android.gms.maps.MapView>

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchBarMap"
        style="@style/MaterialSearchBarLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:outlineProvider="bounds"
        app:mt_hint="Location"
        app:mt_maxSuggestionsCount="5"
        app:mt_speechMode="false"
        app:mt_navIconEnabled="true"
        app:mt_placeholder="Set the location" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/map_switch_button"
        android:onClick="switchMarkers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/switch_between_events_and_venues"
        android:textColor="#FFFFFF"
        android:elevation="5dp"
        android:outlineProvider="bounds" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/map_zoomin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="90dp"
        android:text="@string/zoom_in"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/map_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="90dp"
        android:layout_toEndOf="@id/map_zoomin_button"
        android:layout_centerHorizontal="true"
        android:text="@string/settings" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/map_zoomout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/map_settings_button"
        android:layout_marginStart="306dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:text="@string/zoom_out" />

</RelativeLayout>